--- a/.github/workflows/workflow_pr_qa.yaml
+++ b/.github/workflows/workflow_pr_qa.yaml
@@ -1,6 +1,10 @@
-name: Continuous Integration
+name: PR to QA
 
-on: pull_request
+on: 
+    pull_request:
+        branches: [ QA ]
+        paths:
+            - 'force-app/**'        
 
 jobs:
     continuous-integration:
