--- a/.github/workflows/push_qa_branch.yml
+++ b/.github/workflows/push_qa_branch.yml
@@ -40,7 +40,7 @@ jobs:
             - name: 'Populate auth file with SFDX_URL secret of the integration and staging orgs'
               shell: bash
               run: |
-                  echo ${{ secrets.SFDX_INTEGRATION_URL}} > ./SFDX_INTEGRATION_URL.txt                  
+                  echo ${{ secrets.SFDX_QA_URL}} > ./SFDX_QA_URL.txt                  
 
             - name: 'Create delta packages for new, modified or deleted metadata'
               run: | 
@@ -49,7 +49,7 @@ jobs:
 
             # Authenticate to org
             - name: 'Authenticate to Integration Org'
-              run: sfdx auth:sfdxurl:store -f ./SFDX_INTEGRATION_URL.txt -s -a integration
+              run: sfdx auth:sfdxurl:store -f ./SFDX_QA_URL.txt -s -a integration
 
             - name: 'Deploy the entire branch to QA org'
               run: sfdx force:source:deploy -p force-app --testlevel RunLocalTests --json
