--- a/.github/workflows/push_qa_branch.yml
+++ b/.github/workflows/push_qa_branch.yml
@@ -52,7 +52,7 @@ jobs:
               run: sfdx auth:sfdxurl:store -f ./SFDX_QA_URL.txt -s -a integration
 
             - name: 'Deploy the entire branch to QA org'
-              run: sfdx force:source:deploy -p force-app --testlevel RunLocalTests --json
+              run: sfdx force:source:deploy -p force-app --testlevel NoTestRun --json
 
             - name: 'Deploy destructive changes (if any) to Integration org'
               run: sfdx force:mdapi:deploy -d "changed-sources/destructiveChanges" --checkonly --ignorewarnings     
