--- a/.github/workflows/push_qa_branch.yml
+++ b/.github/workflows/push_qa_branch.yml
@@ -52,7 +52,11 @@ jobs:
               run: sfdx auth:sfdxurl:store -f ./SFDX_QA_URL.txt -s -a integration
 
             - name: 'Deploy the entire branch to QA org'
-              run: sf project deploy start -d force-app --test-level NoTestRun --json
+              ## deploy
+              ##run: sf project deploy start -d force-app --test-level NoTestRun --json
+
+              ## To check whether a deployment would succeed (to prepare for Quick Deploy):
+              run: sfdx force:source:deploy -d force-app -l NoTestRun -c
 
             - name: 'Deploy destructive changes (if any) to Integration org'
               run: sfdx force:mdapi:deploy -d "changed-sources/destructiveChanges" --checkonly --ignorewarnings     
